<resources>
    <string name="app_name">SA</string>
    <string name="des">Maintain a list of products and their warranty expiry date with our new app!</string>
    <string name="website">Our Website!</string>
    <string name="maintain">Maintain Now!</string>
    <string name="productName">Enter Product Name </string>
    <string name="prodName" />
    <string name="exp" />
    <string name="enter_expiry_date_yyyy_m_d"><![CDATA[Enter Expiry Date <YYYY-M-D>]]></string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="enter_position_number">Enter Position Number</string>
    <string name="update">Update</string>
</resources>